--- a/css/custom.css
+++ b/css/custom.css
@@ -2,3 +2,15 @@
 .schedule-table > tbody > tr { 
   text-align: center;
 }
+
+.logo {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+
+  display: block;
+  width: 120px;
+  height: 30px;
+
+  background-image: url("./assets/soft-uni-logo.png");
+}
